# fileglancer

./: .gitignore  .nextflow.log.1  CLAUDE.md  README.md  clean.sh  config.yaml.template  eslint.config.mjs  lefthook.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  vite.config.ts
.devcontainer/: Dockerfile  dc.sh  devcontainer.json  entrypoint.sh  init-firewall.sh  post-create.sh
.devcontainer/podman-shim/: podman
.github/workflows/: build.yml  chromatic.yml
docs/: AuthoringApps.md  CLI.md  DevContainer.md  Development.md  RFC-9-OZX-Implementation.md  ViewersConfiguration.md  config.yaml.template  dependency-update-spec.md  viewers.config.yaml.template
fileglancer/: app.py  apps.py  auth.py  cli.py  database.py  dev_launch.py  fg_plugins.py  filestore.py  giturls.py  handlers.py  issues.py  model.py  ozxzip.py  platform_compat.py  server.py  settings.py  sshkeys.py  user_context.py  user_worker.py  utils.py  worker_pool.py  zipread.py
fileglancer/alembic/: env.py
fileglancer/alembic/versions/: 20b763c28c4f_add_url_prefix_to_proxied_paths.py  3c5b7a9f2c11_add_short_name_to_neuroglancer_states.py  76858c70bde5_add_is_transparent_to_proxied_paths.py  a1b2c3d4e5f6_add_neuroglancer_links_table.py  a3f7c2e19d04_add_jobs_table.py  b1c4e7f29a83_add_work_dir_browse_link_to_jobs.py  b8e4f1a92c37_canonicalize_github_urls.py  c05fd0a62deb_create_task_data_table.py  c1f9a4e7b2d8_bake_revision_into_app_urls.py  c4e8a7d92b15_add_user_apps_table.py  c7d2f4a9e103_add_runtime_metadata_to_jobs.py  d2c9f4a07b13_drop_pull_latest_from_jobs.py  d9f1a3c5e208_add_app_listings_table.py  e1a7c93d04f5_add_env_parameters_to_jobs.py  f3a9c41d76e2_add_script_path_to_jobs.py
fileglancer/apps/: __init__.py  adapters.py  command.py  core.py  jobfiles.py  jobs.py  manifest.py  nextflow.py  pixi.py  worker.py
fileglancer/fgtasks/: fgtasks.py  nftask.py
fileglancer/tests/: test_filestore.py
frontend/: .gitignore  .prettierignore  CLAUDE.md  chromatic.config.json  eslint.config.mjs  package-lock.json  package.json  tailwind.config.js  viewers.config.yaml.template  vite.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/public/viewers/: avivator.yaml  neuroglancer.yaml  validator.yaml  vole.yaml
frontend/src/: App.tsx  main.tsx  omezarr-helper.ts  shared.types.ts
frontend/src/__tests__/: setup.ts  test-utils.tsx
frontend/src/components/: AppDetail.tsx  AppJobs.tsx  AppLaunch.tsx  Apps.tsx  Browse.tsx  Catalog.tsx  ErrorFallback.tsx  Help.tsx  Home.tsx  JobDetail.tsx  Jobs.tsx  Links.tsx  ListingDetail.tsx  Login.tsx  NGLinks.tsx  NeuroglancerLinks.tsx  Notifications.tsx  Preferences.tsx  SSHKeys.tsx  Views.tsx
frontend/src/config/: resolveViewersConfigPath.ts  viewerLogos.ts  viewers.config.yaml  viewersConfig.ts
frontend/src/constants/: docs.ts
frontend/src/contexts/: AuthContext.tsx  ExternalBucketContext.tsx  FileBrowserContext.tsx  NeuroglancerContext.tsx  NotificationsContext.tsx  PreferencesContext.tsx  ProfileContext.tsx  ProxiedPathContext.tsx  ServerHealthContext.tsx  TicketsContext.tsx  ViewersContext.tsx  ZonesAndFspMapContext.tsx
frontend/src/hooks/: useActiveJobCount.ts  useAppActions.ts  useContextMenu.ts  useConvertFileDialog.ts  useDataToolLinks.ts  useDeleteDialog.ts  useFavoriteToggle.ts  useFileNameValidation.ts  useFileSelector.ts  useFilteredZonesAndFavorites.ts  useHandleDownload.ts  useHandleView.ts  useHideDotFiles.ts  useLayoutPrefs.ts  useListingActions.ts  useN5Metadata.ts  useNavigationInput.ts  useNewFolderDialog.ts  useOpenZones.ts  usePermissionsDialog.ts  useRefreshFileBrowser.ts  useRenameDialog.ts  useZarrMetadata.ts
frontend/src/layouts/: AppsLayout.tsx  BrowseLayout.tsx  MainLayout.tsx
frontend/src/queries/: appsQueries.ts  authQueries.ts  externalBucketQueries.ts  fileContentQueries.ts  fileQueries.errorHandling.test.tsx  fileQueries.repro.test.tsx  fileQueries.ts  jobsQueries.ts  n5Queries.ts  neuroglancerQueries.ts  ngLinkQueries.ts  notificationQueries.ts  ozxQueries.ts  preferencesQueries.ts  profileQuery.ts  proxiedPathQueries.ts  queryUtils.ts  sshKeyQueries.ts  ticketsQueries.ts  useProfileQuery.ts  useZoneAndFileSharePathMapQuery.ts  versionQuery.ts  (+3 more)
frontend/ui-tests/: package-lock.json  package.json  playwright.config.js  utils.ts
scripts/: bump_deps.py
src/: App.tsx  shared.types.ts
src/__tests__/: errorHandling.test.ts
src/components/: Help.tsx  Home.tsx  Notifications.tsx  Preferences.tsx
src/contexts/: AuthContext.tsx  ExternalBucketContext.tsx  FileBrowserContext.tsx  PreferencesContext.tsx  ProfileContext.tsx  ProxiedPathContext.tsx  ServerHealthContext.tsx  TicketsContext.tsx  ZonesAndFspMapContext.tsx
src/hooks/: useCentralVersion.ts  useCheckFavorites.ts  useDeleteDialog.ts  useHandleLeftClick.ts  useLayoutPrefs.ts  useNavigationInput.ts  useNewFolderDialog.ts  usePermissionsDialog.ts  useRenameDialog.ts  useSearchFilter.ts
src/layouts/: BrowseLayout.tsx  MainLayout.tsx
src/queries/: useZoneAndFileSharePathMapQuery.ts
src/utils/: centralServerHealth.ts  errorHandling.ts  index.ts  pathHandling.ts  serverHealth.ts
tests/: conftest.py  test_apps.py  test_apps_endpoints.py  test_bump_deps.py  test_catalog_endpoints.py  test_config_template.py  test_database.py  test_endpoints.py  test_filestore.py  test_ozxzip.py  test_pagination.py  test_poll.py  test_revision_migration.py  test_sshkeys.py  test_url_migration.py  test_utils.py  test_worker.py  test_zipread.py  test_zipread_resume.py
ui-tests/: README.md  global-teardown.js  playwright.config.js
ui-tests/tests/: fgzones.spec.ts  localzone.spec.ts  testutils.ts
(+249 files in other folders)
